<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OvingtonGolf</string>
    <string name="title_activity_main">Lets play GOLF</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="manageCourses">Manage Courses</string>
    <string name="title_activity_manage_courses"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="lblCourseName">course name</string>
    <string name="lblAddressLine1">address line 1</string>
    <string name="lblAddressLine2">address line 2</string>
    <string name="lblCoursePhone">phone number</string>
    <string name="lblCourseEMail">email address</string>
    <string name="managePlayers">Manage Players</string>
    <string name="title_activity_manage_players">managePlayers</string>
    <string name="lblPlayerName">player name</string>
    <string name="hello_top_fragment">The top one here</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Add new game</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_action_delete</item>
        <item>@drawable/ic_action_add</item>
        <item>@drawable/ic_action_apply</item>
        <item>@drawable/ic_action_revert</item>
        <item>@drawable/ic_action_revert</item>
        <item>@drawable/ic_action_revert</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>



</resources>
