<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:sqledit="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:id="@+id/sqlLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/accent"
              tools:context="com.peter.ovingtongolf.PlayerManager.frag_edit_player">

    <com.peter.ovingtongolf.utilities.sqlEditText
        android:id="@+id/EditName"
        android:layout_height="wrap_content"
        android:hint="@string/lblPlayerName"
        android:inputType="text"
        android:singleLine="true"
        android:layout_width="fill_parent"
        sqledit:table="players"
        sqledit:field="player_name"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="2dp"/>

    <com.peter.ovingtongolf.utilities.sqlEditText
        android:id="@+id/EditAddress1"
        android:layout_height="wrap_content"
        android:hint="@string/lblAddressLine1"
        android:inputType="text"
        android:singleLine="true"
        android:layout_width="fill_parent"
        sqledit:table="players"
        sqledit:field="player_addr1"
        android:layout_margin="2dp"/>

    <com.peter.ovingtongolf.utilities.sqlEditText
        android:id="@+id/EditAddress2"
        android:layout_height="wrap_content"
        android:hint="@string/lblAddressLine2"
        android:inputType="textPostalAddress"
        android:layout_width="fill_parent"
        sqledit:table="players"
        sqledit:field="player_addr2"
        android:layout_margin="2dp"/>

    <com.peter.ovingtongolf.utilities.sqlEditText
        android:id="@+id/EditPhone"
        android:layout_height="wrap_content"
        android:hint="@string/lblCoursePhone"
        android:inputType="phone"
        android:layout_width="fill_parent"
        sqledit:table="players"
        sqledit:field="player_phone"
        android:layout_margin="2dp"
        />

    <com.peter.ovingtongolf.utilities.sqlEditText
        android:id="@+id/EditEMail"
        android:layout_height="wrap_content"
        android:hint="@string/lblCourseEMail"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        sqledit:table="players"
        sqledit:field="player_email"
        android:layout_margin="2dp"/>


    <RelativeLayout android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:background="@color/accent"
                    android:layout_height="wrap_content">


        <com.peter.ovingtongolf.utilities.sqlApplyButton
            android:id="@+id/SqlApplyButton"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            sqledit:sql_color="#99CCaa"
            sqledit:sql_buttonFunction="add|apply"
            android:layout_marginRight="18dip"
            android:layout_marginBottom="18dip"/>

        <com.peter.ovingtongolf.utilities.sqlApplyButton
            android:id="@+id/SqlAddButton"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:layout_toLeftOf="@+id/SqlApplyButton"
            android:layout_alignParentBottom="true"
            sqledit:sql_color="#99CCaa"
            sqledit:sql_buttonFunction="undo|delete"
            android:layout_marginRight="9dip"
            android:layout_marginBottom="18dip"/>
    </RelativeLayout>

</LinearLayout>
